--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "nodejs-basics",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.js",
-    "start": "node ./src/index.js",
+    "start": "dotenv node ./src/index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -16,6 +17,15 @@
     "@eslint/js": "^9.17.0",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0",
+    "pino-http": "^10.4.0"
   }
 }
